# avqa

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPERIMENTS.md  LICENSE  MANIFEST.in  Makefile  OPTIMIZATIONS.md  PUBLICATION.md  README.md  RELEASE.md  RESEARCH.md  SECURITY.md  SPEC.md  SPEC_COMPLIANCE.md  TODO.md  cleanup.sh  pyproject.toml  pytest.ini  setup.sh  spec.md
.github/workflows/: ci-cpu.yml  ci-gpu.yml  ci.yml  release.yml
benchmarks/: repro_acmpr.py  repro_bcar.py  repro_compile.py  repro_cpu.py  repro_hvaq.py
benchmarks/raw/EXP-0001/: config.json  raw.json  summary.md
benchmarks/raw/EXP-0002/: raw.json  summary.md
benchmarks/raw/EXP-0004/: config.json  raw.json  summary.md
benchmarks/raw/EXP-0005/: raw.json  summary.md
benchmarks/raw/EXP-0006/: config.json  raw.json  summary.md
docs/: architecture.md  checklist.md  dependency_graph.md  implementation_plan.md  math.md  milestone_plan.md  spec_compliance.md  spec_gaps.md  spec_review.md
docs/api/: README.md
examples/: 01_basic_attention.py  03_hf_replacement.py
scripts/: build.sh  check_dist.sh
src/avqa/: __init__.py  _pipeline.py  _version.py  attention.py  attention_module.py  backend.py  cache.py  codebook.py  config.py  data.py  exceptions.py  functional.py  hopfield.py  integrations.py  logging.py  merge.py  multipass.py  online_adaptation.py  pipeline.py  profiling.py  quantizer.py  refinement.py  registry.py  routing.py  scheduler.py  streaming_vq.py  version.py  visualization.py
src/avqa/integrations/: __init__.py  flashattn.py  hf.py  vllm.py  xformers.py
src/avqa/triton/: __init__.py  _loader.py  child_attention.py  correction.py  loader.py  parent_attention.py  vq.py
src/avqa/utils/: __init__.py  numerics.py  seed.py  validation.py
tests/integration/: test_attention_interops_gpu.py  test_avqa_end_to_end.py  test_integrations.py  test_triton_kernels_gpu.py
tests/performance/: test_benchmarks.py
tests/reference/: test_hand_computed.py
tests/unit/: test_attention.py  test_attention_compile.py  test_attention_module.py  test_backend.py  test_cache.py  test_codebook.py  test_config.py  test_data.py  test_exceptions.py  test_functional.py  test_hopfield.py  test_invariants.py  test_logging.py  test_merge.py  test_multipass.py  test_online_adaptation.py  test_profiling_visualization.py  test_quantizer.py  test_refinement.py  test_registry.py  test_routing.py  test_scheduler.py  test_spec_fixes.py  test_streaming_vq.py  test_triton_kernels.py  test_vllm_adapter.py
tests/unit/utils/: test_numerics.py  test_seed.py  test_validation.py
