[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "avqa"
version = "0.1.0"
description = "Adaptive Vector Quantized Attention — production-grade attention infrastructure for PyTorch"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "sachin", email = "sachncs@gmail.com" },
]
keywords = [
  "attention",
  "vector-quantization",
  "transformer",
  "pytorch",
  "efficient-attention",
  "long-context",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
huggingface = [
  "transformers>=4.40",
]
vllm = [
  "vllm>=0.5",
]
flash-attn = [
  "flash-attn>=2.5",
]
xformers = [
  "xformers>=0.27",
]
triton = [
  "triton>=2.2",
]
viz = [
  "matplotlib>=3.7",
  "graphviz>=0.20",
]
all = [
  "avqa[huggingface,vllm,flash-attn,xformers,triton,viz]",
]

[project.urls]
Homepage = "https://github.com/sachncs/avqa"
Documentation = "https://github.com/sachncs/avqa/tree/main/docs"
Issues = "https://github.com/sachncs/avqa/issues"
Source = "https://github.com/sachncs/avqa"

[tool.hatch.build.targets.wheel]
packages = ["src/avqa"]

[tool.hatch.build.targets.sdist]
include = [
  "src/avqa",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "docs",
  "tests",
]

[tool.hatch.version]
path = "src/avqa/_version.py"
pattern = "__version__ = \"(?P<version>[^\"]+)\""

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
  | docs/_build
  | src/avqa/_version\.py
)/
'''
