[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "avqa"
dynamic = ["version"]
description = "Adaptive Vector Quantized Attention — production-grade attention infrastructure for PyTorch"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "sachin", email = "sachncs@gmail.com" },
]
keywords = [
  "attention",
  "vector-quantization",
  "transformer",
  "pytorch",
  "efficient-attention",
  "long-context",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
  "mypy",
  "hypothesis",
]
viz = [
  "matplotlib>=3.7",
  "graphviz>=0.20",
]

[project.urls]
Homepage = "https://github.com/sachncs/avqa"
Documentation = "https://github.com/sachncs/avqa/tree/main/docs"
Issues = "https://github.com/sachncs/avqa/issues"
Source = "https://github.com/sachncs/avqa"

[tool.hatch.build.targets.wheel]
packages = ["src/avqa"]

[tool.hatch.build.targets.sdist]
include = [
  "src/avqa",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "docs",
  "tests",
]

[tool.hatch.version]
path = "src/avqa/version.py"
pattern = "__version__ = \"(?P<version>[^\"]+)\""

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
show_missing = true
skip_covered = false
fail_under = 85
